--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -1,8 +1,9 @@
-#logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+
+  .jumbotron,
+  .support {
+    height: 80vh;
   }
+
   #buttona {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -22,14 +23,45 @@
     background-color: darkmagenta;
   }
 
-  #content {
-    padding: 5rem 1rem;
-    background-color: darkviolet;
-  }
-
   #icons {
     color: white;
     margin-left: 0;
     margin-right: 0;
   }
-  
+
+ 
+  #buttons {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    transform: translateX(0%);
+  }
+
+
+  .support {
+  background-color: #ff69b4; 
+ }
+ 
+ .jumbotron {
+  padding-top: 5rem;
+  background-color: #9400d3;
+ }
+
+ #wave {
+  position: fixed;
+  top: 0;
+  transform: translateY(0%);
+  left: 0;
+  transform: translateX(0%);
+  padding-top: 5rem;
+}
+
+#carousel {
+  position: relative; top: 0; left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  transform: translateX(0%);
+}
+
