--- a/templates/index.html
+++ b/templates/index.html
@@ -31,18 +31,20 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"
     ></script>
     <link rel="stylesheet" href="../static/mystyle.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script>
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"
+      >
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   </head>
   <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <!--Start Of Content A-->
-    <section class="jumbotron container-fluid" style="height: 100vh">
+    <!--Start Of Content-->
+    <section class="jumbotron container-fluid mb-3" id="jumbotron">
       <!--Start Of IMAGE-->
-      <div class="container-fluid mb-3">
+      <div class="mb-3">
         <img
           src="../static/logo lmn.jpg"
           width="200"
@@ -52,9 +54,8 @@
         />
       </div>
       <!--End Of IMAGE-->
-
       <!--Start Of INTRO-->
-      <div class="container-fluid mb-3" id="intro">
+      <div class="mb-3" id="intro">
         <h1 class="text-center text-light">LMN Digital</h1>
         <p class="text-center text-light mb-3">
           LMN Digital is a boutique marketing agency based in Indonesia<br />
@@ -65,9 +66,8 @@
         </p>
       </div>
       <!--End Of INTRO-->
-
       <!--Start Of ICONS-->
-      <div class="container-fluid text-center mb-3" id="icons">
+      <div class="text-center mb-3" id="icons">
         <div class="row justify-content-md-center mb-3">
           <!--Start Of WA-->
           <div class="col">
@@ -160,45 +160,11 @@
         </div>
       </div>
       <!--End Of ICONS-->
-      <!--<div id="wave">
-      <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ff69b4"
-          fill-opacity="1"
-          d="M0,160L80,170.7C160,181,320,203,480,181.3C640,160,800,96,960,96C1120,96,1280,160,1360,192L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-      </svg>
-      </div>-->
-    </section>
-    <!--End Of Content A-->
-
-    <!--Start Of Content B-->
-    <section class="support">
-      <!--Start Of Carousel-->
-      <div class="container-fluid" id="carousel">
-        <div
-          id="carouselExampleSlidesOnly"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="LMN Digital" />
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="LMN Digital" />
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="LMN Digital" />
-            </div>
-          </div>
-        </div>
-      </div>
       <!--Start Of BUTTONS-->
       <div class="container-fluid" id="buttons">
         <div class="d-grid gap-2 justify-content-center">
           <button
-            class="btn btn-primary btn-outline-dark btn-rounded mb-3 text-dark"
+            class="btn btn-primary btn-outline-light btn-rounded btn-lg btn-xxl mb-3 text-light"
             id="buttona"
             type="button"
             onclick="window.open('https://www.lmn.digital/','_blank')"
@@ -206,7 +172,7 @@
             Our Website
           </button>
           <button
-            class="btn btn-primary btn-outline-dark btn-rounded mb-3 text-dark"
+            class="btn btn-primary btn-outline-light btn-rounded btn-lg btn-xxl mb-3 text-light"
             id="buttonb"
             type="button"
             onclick="window.open('https://maps.app.goo.gl/PkynCoT5Uu6C8ZTU8','_blank')"
@@ -215,14 +181,8 @@
           </button>
         </div>
       </div>
-
       <!--End Of BUTTONS-->
     </section>
-
-    <!--End Of Content B-->
-
-    <footer class="container-fluid" id="footer">
-      <h6 class="text-center text-light">Element Digital - 2023</h6>
-    </footer>
+    <!--End Of Content A-->
   </body>
 </html>
